--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
         <h1>OS X install and tips</h1>
         <p></p>
 
+        <p><img src="{{ site.baseurl }}/assets/img/osx-logo.png" widht="120", height="120" alt=""></p>
+
         <p class="view"><a href="https://github.com/nicolas-brousse/osx-install-and-tips">View the Project on GitHub <small>nicolas-brousse/osx-install-and-tips</small></a></p>
       </header>
 
